--- a/_posts/2023-01-24-PQ-防美中競爭變衝突-美財政部長葉倫與中國副總理劉鶴會面.html
+++ b/_posts/2023-01-24-PQ-防美中競爭變衝突-美財政部長葉倫與中國副總理劉鶴會面.html
@@ -24,7 +24,7 @@ author: 艾格姆
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/3992f63d-fmwnparwiaarsd3-782x1024.jpg" alt="" class="wp-image-125872" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/3992f63d-fmwnparwiaarsd3-782x1024.jpg 782w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/3992f63d-fmwnparwiaarsd3-229x300.jpg 229w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/3992f63d-fmwnparwiaarsd3-768x1005.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/3992f63d-fmwnparwiaarsd3.jpg 828w" sizes="(max-width: 782px) 100vw, 782px" /><figcaption>美國財政部長葉倫（Janet Yellen）1月18日在達沃斯世界經濟論壇年會會見中國國務院副總理劉鶴<br>劉鶴將於今年全國人大會議上卸下副總理一職，至於繼任者身份目前尚不明朗。<br>圖／Secretary Janet Yellen
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/3992f63d-fmwnparwiaarsd3-782x1024.jpg" alt="" class="wp-image-125872" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/3992f63d-fmwnparwiaarsd3-782x1024.jpg 782w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/3992f63d-fmwnparwiaarsd3-229x300.jpg 229w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/3992f63d-fmwnparwiaarsd3-768x1005.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/3992f63d-fmwnparwiaarsd3.jpg 828w" sizes="(max-width: 782px) 100vw, 782px" /><figcaption>美國財政部長葉倫（Janet Yellen）1月18日在達沃斯世界經濟論壇年會會見中國國務院副總理劉鶴<br>劉鶴將於今年全國人大會議上卸下副總理一職，至於繼任者身份目前尚不明朗。<br>圖／Secretary Janet Yellen
 @SecYellen</figcaption></figure></div>
 
 
