Update VOCUS 2023-01-26 patch

--- a/_posts/2023-01-26-VOCUS-chinese-new-year-或lunar-new-year-命名背後的需求.html
+++ b/_posts/2023-01-26-VOCUS-chinese-new-year-或lunar-new-year-命名背後的需求.html
@@ -37,10 +37,9 @@ author: 克敏
 <div class="draft-block draft--p left">印尼稱Tahun Baru Imlek。Imlek，是閩南語發音的「陰曆」，也就是陰曆新年的意思，對應的即是Lunar New Year。</div>
 <div class="draft-block draft--p left">韓國的Seollal或越南的Tet，都不是對應Chinese New Year，因此New Jeans的Daniella用CNY會被批評，就不僅僅是因為她恰好使用CNY，而是因為棄用韓國的對應用詞。不過偶像團體沒理由刻意引爭議，大概只是覺得CNY在英語更普遍使用。</div>
 <div class="draft-block draft--p left">BTS拍攝Happy Seollal 影片。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/DXvbbffaxzY"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/DXvbbffaxzY"></iframe></div>
 <div class="draft-block draft--p left">參考其他語言就能發現，說到底，不過是西方英語世界對亞洲認識不足，想要用一個詞彙涵蓋所有人。畢竟對認識不足者而言，黃種人都長得一樣。</div>
 <div class="draft-block draft--p left">Chinese New Year和Lunar New Year並不需要單一主導，而是取決於對象。就如前述所說，他有時真的是Chinese New Year啊！<span style="text-decoration: line-through; ">但在不確定恭賀對象前，或許Spring Holidays（春假）——更不精準的用字——會是最折中的祝賀用語。畢竟對廣大上班族而言，誰不喜歡Holiday呢？</span></div>
 <h2 class="draft-block draft--h2" name="header-cckjv">附錄</h2>
 <div class="draft-block draft--p left">共用曆法不是農曆獨有的事，例如緬曆，並被外人熟悉的潑水節，就是泰國（Songkran）、緬甸（Thingyan）和寮國（Pi Mai）共有的節日，名稱都不同。由於泰國的國際知名度較高，往往誤認為是泰國獨有節日。對應部分人對'Chinese' New Year的疑慮，也是可以理解的。</div>
 <div class="draft-block draft--p left">本文亦發表在Matters。</div>
-<div class="draft-block draft--p left"></div>
