--- a/_posts/2023-01-25-INITIUM-专访-1人婚礼-导演周冠威-香港电影耶稣-我今次反对-牺牲-的说法.html
+++ b/_posts/2023-01-25-INITIUM-专访-1人婚礼-导演周冠威-香港电影耶稣-我今次反对-牺牲-的说法.html
@@ -16,7 +16,7 @@ author: 李慧筠
 
 <h2>喜剧与悲剧</h2>
 <p>2019年底至今，周冠威徘徊在喜剧和悲剧之间的交界。《1人婚礼》开拍第一天，他坐在婚纱店里的导演帆布椅，戴住耳机，看着主角身穿白皑皑的婚纱。<br><br>他的魂魄飘泊，心不在焉，觉得自己在梦中。“竟然经历完《时代革命》，我还有电影拍。哇，我在现场。”他喃喃自语，“Rolling的一刻，是我在继续啊。我Running，我Rolling，我正继续走这一条路。”<br><br>几年前，他在台湾拍摄第一套长片《一个复杂故事》时，看到新闻报导一个女生和自己结婚，宣扬爱自己、接纳自己。几年后，他撰写《1人婚礼》的剧本，电影讲述主角<a href="https://theinitium.com/article/20230118-culture-ah-bing-potatoes-youtuber-and-actress/">阿冰</a>和男朋友Dickson经营YouTube频道，为了点击率编织谎言，最终引发混乱，苦心经营的形象逐一破灭。<br><br>构思剧本的时候，反修例运动已过高峰，但依然炽热。那时候，周冠威仍在街上追踪访问前线示威者、救护员，在躁动的街头拍摄纪录片《<a href="https://theinitium.com/article/20211128-culture-interview-theyouth-and-times/">时代革命</a>》。<br><br>一边拍悲剧、一边写喜剧，周冠威每天经历拉扯和割裂。合作的编剧也疑惑：吓，我很不开心，你叫我写喜剧？编剧后来跟他说︰“唉，就试试吧。可能也好，有机会把心思放在喜剧的时空，一个脱离现实的世界。”<br><br>以创作建构自己的飞地，周冠威发现社会也需要这么的一处空间，“剧本说的是真诚面对自己。社会说谎，社会充满创伤，那么我讲真诚、讲幽默感，可能也是社会需要的一件事。”</p>
-<p>充满矛盾的状态，最后化为一种创作的平衡，“现实很多很残酷、很创伤的事，但同时很有光辉、很有希望、很有幽默感，有引人发遽的事情。人生如此交织，才是健康的面对，我庆幸自己用喜剧的思维去平衡那种悲情。”</p>
+<p>充满矛盾的状态，最后化为一种创作的平衡，“现实很多很残酷、很创伤的事，但同时很有光辉、很有希望、很有幽默感，有引人发噱的事情。人生如此交织，才是健康的面对，我庆幸自己用喜剧的思维去平衡那种悲情。”</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230126-hongkong-kiwi-chow-kwun-wai/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/01/b801150107024daca64b2107beae07f5.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="《1人婚礼》导演周冠威在电影的拍摄现场。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">《1人婚礼》导演周冠威在电影的拍摄现场。<span class="credit">摄：林振东/端传媒</span></figcaption></figure>
 
