--- a/_posts/2023-01-26-PQ-年後新人事-陳建仁接行政院長-副手鄭文燦.html
+++ b/_posts/2023-01-26-PQ-年後新人事-陳建仁接行政院長-副手鄭文燦.html
@@ -16,7 +16,7 @@ author: 江 珀石
 
 
 
-<figure class="wp-block-image size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/02/cbd3fc53-1127x768_239052514695.jpg" alt="" class="wp-image-92541" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/02/cbd3fc53-1127x768_239052514695.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/02/cbd3fc53-1127x768_239052514695-300x204.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/02/cbd3fc53-1127x768_239052514695-768x524.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>總統府發言人張淳涵，於週三（ 26 日）晚間表示，新任閣揆人選，將由前副總統陳建仁出任。（圖／中央社）</figcaption></figure>
+<figure class="wp-block-image size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/02/cbd3fc53-1127x768_239052514695.jpg" alt="" class="wp-image-92541" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/02/cbd3fc53-1127x768_239052514695.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/02/cbd3fc53-1127x768_239052514695-300x204.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/02/cbd3fc53-1127x768_239052514695-768x524.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>總統府發言人張淳涵，於週三（ 26 日）晚間表示，新任閣揆人選，將由前副總統陳建仁出任。（圖／中央社）</figcaption></figure>
 
 
 
