--- a/_posts/2023-01-28-PQ-禁抖音沒用-美輿論有不同聲音.html
+++ b/_posts/2023-01-28-PQ-禁抖音沒用-美輿論有不同聲音.html
@@ -128,7 +128,7 @@ author: 林藤
 
 
 
-<p class="pqpoint">然而，儘管反抖音禁令的聲音言之鑿鑿，甚至提出第一修正案所保障之權利來反對全面禁止抖音 APP，但他們卻<strong>刻意忽視抖音並非唯一一個免費影音社交平台的事實</strong>，抖音禁令要上綱到剝奪言論自由和限縮學術自由似乎有些過頭 —— 儘管受眾者的普及度的確會受影響。<br><br>值得注意的是，在美國參眾兩院不分黨派都對抖音所引發的資安及國安疑慮、抖音又與 CFIUS 進行緊鑼密鼓的談判之時，由部份主流媒體所發動的反抖音禁令輿論操作動機同樣令人懷疑，這是否也與中國滲透或中國影響力有關？或者這也是中國資訊戰的一部分？</p>
+<p class="pqpoint">然而，儘管反抖音禁令的聲音言之鑿鑿，甚至提出第一修正案所保障之權利來反對全面禁止抖音 APP，但他們卻<strong>刻意忽視抖音並非唯一一個免費影音社交平台的事實</strong>，抖音禁令要上綱到剝奪言論自由和限縮學術自由似乎有些過頭 —— 儘管受眾者的普及度的確會受影響。<br><br>值得注意的是，在美國參眾兩院不分黨派都對抖音所引發的資安及國安疑慮、抖音又與 CFIUS 進行緊鑼密鼓的談判之時，由部份主流媒體所發動的反抖音禁令輿論操作動機同樣令人懷疑，這是否也與中國滲透或中國影響力有關？或者這也是中國資訊戰的一部分？難道就因為這個中國 APP 好用受歡迎，就可以無視它監控特定人士、令用戶處於風險疑慮和恐懼之中嗎？</p>
 
 
 
