Update VOCUS 2023-01-28 patch

--- a/_posts/2023-01-27-VOCUS-遇到不熟悉的文案需求-如何開始撰寫.html
+++ b/_posts/2023-01-27-VOCUS-遇到不熟悉的文案需求-如何開始撰寫.html
@@ -8,7 +8,6 @@ tags: blog
 author: 我是文案
 ---
 
-<div class="draft-block draft--p left"></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.unsplash.com/photo-1620908615466-3a18a19991e8?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDExfHx0aGlua3xlbnwwfHx8fDE2NzQxMTkyNTY&amp;ixlib=rb-4.0.3&amp;q=80" data-width="3906" data-height="2929" data-source="{&quot;name&quot;:&quot;Belinda Fewings&quot;,&quot;url&quot;:&quot;https://unsplash.com/@bel2000a&quot;,&quot;provider&quot;:&quot;Unsplash&quot;}" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">「你可以幫我寫銷售頁/社群文案/品牌文案⋯⋯嗎？」作為一個獨立文案，遇到的需求類型五花八門，但是如果這是你第一次遇到特定類型的文案需求，要如何開始準備與進行撰寫呢？</div>
 <h2 class="draft-block draft--h2" name="header-3tm6q">【釐清業主需求】</h2>
@@ -20,3 +19,32 @@ author: 我是文案
   <li class="draft-block draft--li">互動增加品牌忠誠度</li>
 </ul>
 <div class="draft-block draft--p left">每一篇文案都有可能起到多種效益，但是反過來說卻是不成立的：必須和業主確定最主要的目標之後，將撰寫重點放在其中一個目的上，其他的效益只是衍生的好處而已。</div>
+<div class="draft-block draft--p left">例如主要是銷售目的時，就必須將重點放在產品對消費者的效用，從各種不同的角度思考產品的多種使用情境、優勢等，而不是使用很漂亮的字詞卻只描述單一種使用情境，導致有可能沒有涵蓋到足夠多的消費者需求。</div>
+<div class="draft-block draft--p left">反之，如果主要目的是建立品牌形象，就可以聚焦於單一場景的描寫，將大量的篇幅用於烘托氛圍，讓閱讀到的人聚焦於感受上。</div>
+<div class="draft--imgNormal draft-block"><div><img src="https://images.unsplash.com/photo-1484795819573-86ae049cb815?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDI2fHxzaG9yZXxlbnwwfHx8fDE2NzQxMTk2ODg&amp;ixlib=rb-4.0.3&amp;q=80" data-width="5472" data-height="3648" data-source="{&quot;name&quot;:&quot;Justin  Bisson Beck&quot;,&quot;url&quot;:&quot;https://unsplash.com/@justinbissonbeck&quot;,&quot;provider&quot;:&quot;Unsplash&quot;}" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<h2 class="draft-block draft--h2" name="header-958hj">【分辨文案種類】</h2>
+<div class="draft-block draft--p left">清楚了解業主需求後，就會知道「文案種類」的區分為何如此多元。文案的種類不僅受到平台的限制，也受到業主所屬行業、產品/服務類型、目標受眾、市場策略等多種因素的影響。</div>
+<div class="draft-block draft--p left">例如在facebook平台上，有些人可能想賣東西，就會利用短版的產品描述文案，介紹產品詳細特點、價格、服務等，來引導消費者下訂單。</div>
+<div class="draft-block draft--p left">有人想讓形象更高貴雅致，例如生活風格品牌用圖文並茂的社群貼文，來展示品牌文化與價值，吸引相同品味的受眾。</div>
+<div class="draft-block draft--p left">有人想增加幽默的互動，如網紅在社群平台放上搞笑的影片影集，增加消費者的黏度和興趣。</div>
+<div class="draft-block draft--p left">但是現行通稱下，它們都會被叫做社群文案，因此光從名字上區分，可能會誤解了對方的需求。在<a href="https://copywrite-tw.com/types-of-copywriting/" target="_blank" class="draft--a"><span style="text-decoration: underline; ">文案有哪些種類與主題呢？</span></a>這篇文章中，我有對於文案種類更詳細的說明。</div>
+<div class="draft--imgNormal draft-block"><div><img src="https://images.unsplash.com/photo-1508394522741-82ac9c15ba69?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDYyfHxjYXNlJTIwc3R1ZHl8ZW58MHx8fHwxNjc0MTE5ODA0&amp;ixlib=rb-4.0.3&amp;q=80" data-width="2992" data-height="2000" data-source="{&quot;name&quot;:&quot;Estée Janssens&quot;,&quot;url&quot;:&quot;https://unsplash.com/@esteejanssens&quot;,&quot;provider&quot;:&quot;Unsplash&quot;}" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<h2 class="draft-block draft--h2" name="header-f1jjk">【收集案例與拆解】</h2>
+<div class="draft-block draft--p left">收集與拆解文案案例對學習文案寫作過程非常重要。下面的步驟可以幫助你收集和拆解文案案例：</div>
+<div class="draft-block draft--p left">你可以從以下途徑收集案例</div>
+<h3 class="draft-block draft--h3" name="header-6bj14">相關產業文案</h3>
+<div class="draft-block draft--p left">和你預計撰寫的文案相同產業領域，如食品、美妝、汽車等。</div>
+<h3 class="draft-block draft--h3" name="header-cfvm7">相同曝光管道文案</h3>
+<div class="draft-block draft--p left">如facebook、電子商城、網站、新聞媒體、抖音等。</div>
+<h3 class="draft-block draft--h3" name="header-o8gt">相同風格文案</h3>
+<div class="draft-block draft--p left">如感性雞湯、搞笑、風格文案等。</div>
+<div class="draft-block draft--p left">拆解案例：讀取收集到的文案案例，並進行詳細的分析。注意文章的結構、用詞、語氣、句型、內容等，並思考它們是如何被運用來達成目的的。</div>
+<div class="draft-block draft--p left">找出關鍵字：將每篇文章中重要的關鍵字、用詞、句型記錄下來，有助於未來的寫作。</div>
+<h2 class="draft-block draft--h2" name="header-f7jsm">【模仿和優化】</h2>
+<div class="draft-block draft--p left">如果你能妥善地做到收集案例與拆解，那你一定也能做到優異的模仿和優化。舉例來說，你是否能拆解出以下文案的特色：</div>
+<div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/fd31b68f-ae68-41f8-9f39-8e99a2eab5cf.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<h2 class="draft-block draft--h2" name="header-21nlk">結語</h2>
+<div class="draft-block draft--p left">如果短期內還沒辦法做到，找個前輩來問問是最快的方式，從不斷地練習拆解與模仿中，了解如何閱讀一篇內容。或者你也可以參考我的<a href="https://copywrite-tw.com/product/%e3%80%90-500-30min%e3%80%91%e6%96%87%e6%a1%88%e6%92%b0%e5%af%ab%e8%ab%ae%e8%a9%a2/" target="_blank" class="draft--a">文案諮詢服務</a>。</div>
+<div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
+<div class="draft-block draft--p left">認為這篇文章有價值的讀者，請按個喜歡或追蹤，以讓我未來能有機會跟大家分享更多文案工作的內容，也歡迎來《<a href="https://www.facebook.com/xicopywriter/" target="_blank" class="draft--a">我是文案</a>》粉絲頁玩。</div>
+<div class="draft-block draft--p left">更多浪費才能的內容就在 【<a href="https://pse.is/BXANA" target="_blank" class="draft--a">商業文案全解析，擁有你的寫作孵化器</a>】線上課程</div>
