--- a/_posts/2023-01-27-PQ-小笠原欣幸-從-2022-台灣地方選舉看台灣民主的優勢.html
+++ b/_posts/2023-01-27-PQ-小笠原欣幸-從-2022-台灣地方選舉看台灣民主的優勢.html
@@ -8,7 +8,7 @@ tags: blog
 author: 陳怡菱
 ---
 
-<p class="pqpoint">編按：此篇文章出於日本台灣專家小笠原欣幸教授發表於今年 1 月 6 日發行的月刊<a href="https://www.php.co.jp/magazine/voice/?unique_issue_id=12542" target="_blank" rel="noopener">《Voice》2023 年 2 月號</a>。九合一選舉過後，再來冷靜地看待這個分析，除譯文外並加上數據圖表，方便讀者閱讀，若有疏漏，望請斧正。</p>
+<p class="pqpoint">編按：此篇文章出自日本台灣專家小笠原欣幸教授發表於今年 1 月 6 日發行的月刊<a href="https://www.php.co.jp/magazine/voice/?unique_issue_id=12542" target="_blank" rel="noopener">《Voice》2023 年 2 月號</a>。九合一選舉過後，再來冷靜地看待這個分析，除譯文外並加上數據圖表，方便讀者閱讀，若有疏漏，望請斧正。</p>
 
 
 
