--- a/_posts/2023-01-29-INMEDIA-曾志偉接受鄧炳強訪問互笠高帽-冀政府-摻埋無綫玩-說好香港故事.html
+++ b/_posts/2023-01-29-INMEDIA-曾志偉接受鄧炳強訪問互笠高帽-冀政府-摻埋無綫玩-說好香港故事.html
@@ -8,10 +8,10 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/newnewdontdelete_453.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>保安局局長鄧炳強訪問無綫電視總經理曾志偉，二人在訪問中互笠高帽，曾志偉大讚對方在見記者時的事前準備充足：「你每一次出嚟講嘢，哎，呢個一定係局長花咗好多時間同好多人討論過，然後講返出嚟俾大家聽。因為大家好明白。」曾志偉又表示，冀望政府可以「摻埋無綫玩」，透過電視說好香港故事：「將香港嘅好同精神，未來嘅香港棟樑出一分力，一定要摻埋我玩。」</p>
+<img src="https://www.inmediahk.net/files/column_images/newnewdontdelete_453.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>保安局局長鄧炳強訪問無綫電視總經理曾志偉，二人在訪問中互笠高帽，曾志偉大讚對方在見記者時的事前準備充足：「你每一次出嚟講嘢，哎，呢個一定係局長花咗好多時間同好多人討論過，然後講返出嚟俾大家聽。因為大家好明白。」曾志偉又表示，冀望政府可以「摻埋無綫玩」，透過電視說好香港故事：「將香港嘅好同精神⋯⋯為未來嘅香港棟樑出一分力，一定要摻埋我玩。」</p>
 <p>鄧炳強在社交媒體Facebook 專頁發布影片，其節目「小角色，大人物」訪問曾志偉。在開場中，鄧炳強以「獎門人」稱呼曾志偉，曾志偉則稱：「不嬲都係我訪問人，諗唔到今日竟然我兩個可以坐喺度傾計，太好啦。」鄧炳強則回應表示：「世界好多嘢估唔到呀吓。」</p>
 <p>本身是中華海外聯誼會港區理事的曾志偉，為選委會第五界別選委。在2020年2月，時任警務處處長鄧炳強與香港明星足球隊成員飯聚，感謝一眾演藝界支持，曾志偉亦有出席，鄧炳強更稱「我喺區議會講得叻係因為曾志偉」。</p>
-<p>在最新的影片中，鄧炳強指曾志偉出名「橋王」，問除了「天生叻」外，後天如何培養創意，曾志偉就稱後天十分重要，每逢見到新同事都會提議三大要素，「努力、努力、努力」，認為可以將勤補絀，以後天的勤力，彌補先天不足。</p>
+<p>在最新的影片中，鄧炳強指曾志偉出名是「橋王」，問除了「天生叻」外，後天如何培養創意，曾志偉就稱後天十分重要，每逢見到新同事都會提議三大要素，「努力、努力、努力」，認為可以將勤補絀，以後天的勤力，彌補先天不足。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/v72623t723" title="螢幕截圖 2023-01-29 下午4.22.01"><img src="https://live.staticflickr.com/65535/52655135982_f23bdc4fe9_z.jpg" alt="螢幕截圖 2023-01-29 下午4.22.01" /></a></p>
 <p><strong>曾志偉自嘲身材細小  稱政府措施獲認同不用宣傳</strong></p>
 <p>身高只有153厘米的曾志偉就自嘲：「你知我呢啲其貌不揚，又細粒，喺啲群眾裡面人哋都望唔到你。通常你要突出自己，你要多啲嘢講，有啲風趣呀幽默呀咁樣，人哋先至會注意你㗎。」</p>
@@ -20,7 +20,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/w553iPK9R1" title="螢幕截圖 2023-01-29 下午4.23.16"><img src="https://live.staticflickr.com/65535/52655906024_2c1eff13aa_z.jpg" alt="螢幕截圖 2023-01-29 下午4.23.16" /></a></p>
 <p><strong>前年幕前轉任高層  曾志偉稱希望帶更多歡樂予觀眾</strong></p>
 <p>現年69歲的曾志偉，在2021年9月升任為無綫電視的節目內容營運總經理，鄧炳強亦問曾志偉，為何突然由幕前轉任行政人員。</p>
-<p>曾志偉稱，希望能帶更多歡樂予觀眾：「突然間要返番一個寫字樓工，對我嚟講其實唔好唔習慣⋯⋯返嚟TVB最重要一樣嘢，其實喺宜家呢兩、三年，香港咁艱難有疫情，我哋就希望能帶更多歡樂俾觀眾。」他稱只要用心，觀眾便會感受到，「做到知得瞓都係值得嘅，因為你嘅嘢係有人認同你」，鄧炳強附和稱「有遠景，有抱負。</p>
+<p>曾志偉稱，希望能帶更多歡樂予觀眾：「突然間要返番一個寫字樓工，對我嚟講其實唔好唔習慣⋯⋯返嚟TVB最重要一樣嘢，其實喺宜家呢兩、三年，香港咁艱難有疫情，我哋就希望能帶更多歡樂俾觀眾。」他稱只要用心，觀眾便會感受到，「做到知得瞓都係值得嘅，因為你嘅嘢係有人認同你」，鄧炳強附和稱「有遠景，有抱負」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/23kuc214KK" title="螢幕截圖 2023-01-29 下午4.24.25"><img src="https://live.staticflickr.com/65535/52655625841_39d9df5273_z.jpg" alt="螢幕截圖 2023-01-29 下午4.24.25" /></a></p>
 <p><strong>曾志偉：無綫可令更多年輕人認識、了解香港</strong></p>
 <p>在早前的訪問中，鄧炳強均會問嘉賓「如果有一樣嘢能夠為你嘅，會係咩」，今次亦不例外，曾志偉就希望當局可以藉無綫「說好香港故事」：「希望有機會都能夠摻埋我哋玩，你有啲咩嘢msg呢，想大家都知道，將條線插入我哋度，咁我哋就好似個大喇叭咁，周圍話俾人聽。」</p>
