--- a/_posts/2023-01-29-INMEDIA-港超聯-理文四球輕取深水埗-最佳球員黃威-兔年開個好頭.html
+++ b/_posts/2023-01-29-INMEDIA-港超聯-理文四球輕取深水埗-最佳球員黃威-兔年開個好頭.html
@@ -25,7 +25,7 @@ author: 獨媒報導
 <p>今場入場人數為657人，港隊主教練安達臣亦有入場觀戰，他在85分鐘離開球場。在比賽前，深水埗民政事務專員黃昕然、足總主席貝鈞奇、深水埗體育會主席盧永文等人為舞獅點睛，不過在貝鈞奇進場時，就有球迷發出噓聲。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/aGz5B1468y" title="DSC_5285"><img src="https://live.staticflickr.com/65535/52656272870_73a51bf2c8_b.jpg" width="1024" alt="DSC_5285" /></a></p>
 <p><strong>郭嘉諾：開始變我嘅踢法  欣賞球隊落後仍逼搶</strong></p>
-<p>在比賽後，亦即是完成首循環的聯賽賽事後。理文續排在聯賽榜第二位，與榜首的傑志同分，但得失球差不及對手排第二。深水埗主教練郭嘉諾表示，雖然今場輸波但認為「個踢法開始變我嘅踢法，郭嘉諾嘅踢法，迫搶做咗好多，跑動多」，而對比上次五球不敵理文，「内容唔同咗，我哋開始可以踢壓迫性嘅足球」。</p>
+<p>在比賽後，亦即是完成首循環的聯賽賽事後，理文排在聯賽榜首位，與傑志同分。深水埗主教練郭嘉諾表示，雖然今場輸波但認為「個踢法開始變我嘅踢法，郭嘉諾嘅踢法，迫搶做咗好多，跑動多」，而對比上次五球不敵理文，「内容唔同咗，我哋開始可以踢壓迫性嘅足球」。</p>
 <p>郭嘉諾認為，雖然輸波但仍感到滿意，對《獨媒》指給予球隊七分：「起碼有五分係佢哋嘅精神面貌，去到最後輸緊4:0都做緊迫搶，呢個都係貫徹我想做嘅足球。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/5Hn83K52qK" title="DSC_5309"><img src="https://live.staticflickr.com/65535/52656290353_5d6b314673_b.jpg" width="1024" alt="DSC_5309" /></a></p>
 <p><strong>陳曉明：屬於不俗的勝利  黃威冀取聯賽冠軍</strong></p>
