--- a/_posts/2023-01-30-INMEDIA-恒大研增必修國安-活動-去年教師流失8-稱移民屬少數.html
+++ b/_posts/2023-01-30-INMEDIA-恒大研增必修國安-活動-去年教師流失8-稱移民屬少數.html
@@ -20,6 +20,6 @@ author: 獨媒報導
 <p>不過，何順文表示今明兩個學年不會推出新本科課程，但將每年增開碩士課程，下學年將推出文化遺產管理文學碩士及公共政策及風險治理社會科學碩士。他又指，將加強在內地、台灣、澳門，以及東盟國家推廣，期望吸引不同學生來港就讀。至今恒大共設有26個學士課程和14個碩士課程。</p>
 <p>教資會最新數據指2021/2022學年，八大院校的學士學位及副學士出現「退學潮」，整體退學率達3.2%。何順文指，恒大的退學率一直持續偏低，每年僅有20至30人退學，主要是因個人原因退學或轉讀其他學校，「我哋睇唔到有好明顯其他因素令退學率受影響」，又認為「我相信好多入咗嚟讀嘅同學，都幾唔捨得離開我哋」。</p>
 <p><strong>被問到會否續任 何順文：視乎校董會決定</strong></p>
-<p>何順文自2014年出任校長至今己逾8年，被問到會否續任。何順文笑稱，「我仲未同我太太傾，都有啲關卡」，而合約將於去年8月底完結，到時需視乎校董會決定，「校董會都有一個時間表，佢未必想我留喺到，到時我一定會同校董會有個好嘅溝通」。不過，回想過去任期時，何順文表示很感觸。他指，初擔任校長時，「做好一間學校係個夢想，我再唔需要做一份工」，當時希望學校可以成為一間不一樣且具領導地位的私立大學，不過經常被「潑冷水」，更有人指是「mission impossible（不可能的任務） 」。但何順文稱自己「唔信命」，一直堅持實踐信念至今，雖然任期內未能達成目標，但有階段性進展已很滿足。</p>
+<p>何順文自2014年出任校長至今己逾8年，被問到會否續任。何順文笑稱，「我仲未同我太太傾，都有啲關卡」，而合約將於明年8月底完結，到時需視乎校董會決定，「校董會都有一個時間表，佢未必想我留喺到，到時我一定會同校董會有個好嘅溝通」。不過，回想過去任期時，何順文表示很感觸。他指，初擔任校長時，「做好一間學校係個夢想，我再唔需要做一份工」，當時希望學校可以成為一間不一樣且具領導地位的私立大學，不過經常被「潑冷水」，更有人指是「mission impossible（不可能的任務） 」。但何順文稱自己「唔信命」，一直堅持實踐信念至今，雖然任期內未能達成目標，但有階段性進展已很滿足。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/42s3WpU55C" title="無標題"><img src="https://live.staticflickr.com/65535/52658678150_d696a91755_b.jpg" width="1024" alt="無標題" /></a></p>
 </div></div></div>
