--- a/_posts/2023-01-31-PQ-陳建仁今正式接任閣揆-盼打造溫暖堅韌台灣.html
+++ b/_posts/2023-01-31-PQ-陳建仁今正式接任閣揆-盼打造溫暖堅韌台灣.html
@@ -12,7 +12,7 @@ author: 林志鴻
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/c2a96adc-中央社-e1674715376147.jpeg" alt="" class="wp-image-125907" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/c2a96adc-中央社-e1674715376147.jpeg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/c2a96adc-中央社-e1674715376147-300x213.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/c2a96adc-中央社-e1674715376147-768x545.jpeg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>前副總統陳建仁（中）將接任行政院長，副院長預計由前桃園市長鄭文燦（左）；內政部長預計由基隆市長林右昌（右）接任／圖：中央社。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/c2a96adc-中央社-e1674715376147.jpeg" alt="" class="wp-image-125907" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/01/c2a96adc-中央社-e1674715376147.jpeg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/c2a96adc-中央社-e1674715376147-300x213.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/01/c2a96adc-中央社-e1674715376147-768x545.jpeg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>前副總統陳建仁（中）將接任行政院長，副院長預計由前桃園市長鄭文燦（左）；內政部長預計由基隆市長林右昌（右）接任／圖：中央社。</figcaption></figure></div>
 
 
 
