Update VOCUS 2023-02-01 patch

--- a/_posts/2023-01-31-VOCUS-少年-日本諾貝爾文學獎得主耽美作.html
+++ b/_posts/2023-01-31-VOCUS-少年-日本諾貝爾文學獎得主耽美作.html
@@ -47,4 +47,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/171ccbaa-e6be-4c15-ace1-355e32f148fc.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">但在閱讀方面《少年》因為有著時代性所以注釋非常的多，甚至我覺得川端康成寫作的老毛病在這部作品也是嶄露無疑，對於無關緊要的細節，他常常會很仔細地描繪如女性的身體細部與景物，這次他在清野的宗教信仰方面也同樣的細緻到一度讓人覺得要離題的狀況，但是多半是在吐槽宗教教宗這點又很讓人想看下去，算是一種很微妙的私人感想。</div>
 <div class="draft-block draft--p left">年少輕狂的感覺又融合日式舊一代對於男性戀愛的時代感，我認為這是《少年》的醍醐味，尤其我很喜歡那意義不明的對話「我真的喜歡上了清野。對他說：成為我的企鵝吧。而他也回我：當然好。」這種少年情話。回憶總是美，如同多年後川端回顧了中學時與他的書信，有些愛情短暫且美好，就讓一輩子留在時光裡，因為那裡青春校宿裡你我永遠不變。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/lJhOI7jwch4"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/lJhOI7jwch4"></iframe></div>
