--- a/_posts/2023-01-31-INMEDIA-政府推網頁列打擊衞生黑點成效-721-831-塗鴉被遮-死曱甴-無事.html
+++ b/_posts/2023-01-31-INMEDIA-政府推網頁列打擊衞生黑點成效-721-831-塗鴉被遮-死曱甴-無事.html
@@ -10,6 +10,7 @@ author: 獨媒報導
 
 <img src="https://www.inmediahk.net/files/column_images/black_4.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>政府推出全新網頁打擊衞生黑點，列出全港700個衞生黑點，市民可以透過網站舉報新黑點，亦可以對比圖片，監察政府清理行動前後的成效。《獨媒》查看地圖，除了清理後巷雜物、發泡膠箱堆積、店舖阻街外，政府還打擊各處公眾地方的塗鴉。其中多個政治塗鴉被移除，包括「721」、「831」、「抢药吧」，但在屯門西鐵站外一幅牆身，寫有「死曱甴」的塗鴉仍然完封不動。</p>
 <p>點擊政府推出的網頁，先會短暫連線至「AECOM PlanEngage」的連結，再進入新推出的「政府打擊衞生黑點計劃」主題網站。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/aZQ7703B9r" title="553F269587714901B3A31ABD0041BAB5_O"><img src="https://live.staticflickr.com/65535/52662372245_2e6e072750_b.jpg" width="1024" alt="553F269587714901B3A31ABD0041BAB5_O" /></a></p>
 <p><strong>卓永興：移風易俗龐大工程</strong></p>
 <p>政務司副司長卓永興指「改善香港的環境衞生是一項移風易俗的龐大工程」，他呼籲借助公眾參與的力量，加強對計劃的監察，亦動員市民「在行為、監察上支持政府打擊衞生黑點的工作」。他又指目標是「建立一個恆久潔淨亮麗的城市、一個宜居自豪的共同家園」。</p>
 <p>政府又指市民可以在地圖網頁回饋意見，舉報「復發」個案或新出現的黑點；新舉報的黑點經相關部門查證屬實後，會被加入至計劃的黑點名單。</p>
