--- a/_posts/2023-02-01-INMEDIA-楊永杰指啟德簡約公屋遮私樓景觀-主持反問-起商廈仲高喎.html
+++ b/_posts/2023-02-01-INMEDIA-楊永杰指啟德簡約公屋遮私樓景觀-主持反問-起商廈仲高喎.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/20230201kt.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>政府敲定在啟德世運道興建逾萬個「簡約公屋」單位，引起區內私樓業主反對，不滿原本規劃做綜合商業用途的地皮用作「簡約公屋」。當區立法會議會楊永杰更計劃舉行集會，已向警方申請不反對通知書。楊永杰今早在電台節目表示是應居民要求申辦，他歡迎所有人參與，但不評估警方會否反對遊行。楊永杰不回答居民是否擔心樓價跌，而是指屋苑「對到正」有礙景觀，主持人反問「接受三四十層商廈，唔接受十幾層簡約公屋？」楊指不是不接受「簡約公屋」，而是希望政府保證5年後拆除。</p>
+<img src="https://www.inmediahk.net/files/column_images/20230201kt.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>政府敲定在啟德世運道興建逾萬個「簡約公屋」單位，引起區內私樓業主反對，不滿原本規劃做綜合商業用途的地皮用作「簡約公屋」。當區立法會議員楊永杰更計劃舉行集會，已向警方申請不反對通知書。楊永杰今早在電台節目表示是應居民要求申辦，他歡迎所有人參與，但不評估警方會否反對遊行。楊永杰不回答居民是否擔心樓價跌，而是指屋苑「對到正」有礙景觀，主持人反問「接受三四十層商廈，唔接受十幾層簡約公屋？」楊指不是不接受「簡約公屋」，而是希望政府保證5年後拆除。</p>
 <p><strong>遊行路線僅5分鐘 楊永杰指居民要發聲</strong></p>
 <p>楊永杰在商台《在晴朗的一天出發》表示，已入紙向警方申請於2月11日（下周六）舉辦遊行，按現時計劃，遊行路線會由啟德港鐵站A出口出發，遊行到未落成的AIRSIDE商場結束。遊行路線不足500米，主持人笑言「好短咋喎，使乜申請啫，本身係居民嚟，落樓下行去商場」。楊永杰表示「要嘅，所有集會都要申請不反對通知書」，否則會變成非法集會，他表示居民正商討「一系列行動」，他是應要求舉辦集會。</p>
 <p>主持問遊行「有咩作用呢預料，除咗一段新聞」，楊永杰指是居民表達聲音的方法，他亦會約見房屋局局長。他不估計今次警方會否反對遊行，但他認為警方之前因為疫情反對其他集會，現時限聚令已經解除，他有信心成功舉辦。</p>
