--- a/_posts/2023-02-01-INITIUM-早报-缅甸军方再延长国家紧急状态六个月-国民-无声抗议.html
+++ b/_posts/2023-02-01-INITIUM-早报-缅甸军方再延长国家紧急状态六个月-国民-无声抗议.html
@@ -37,7 +37,7 @@ author:
 <p>黑利现年51岁，是印度裔美国人。她曾在2011年至2017年担任南卡罗来纳州长，曾是当时最年轻的美国州长，也是该州第一位女性州长，以及美国史上第三位南方州的非白人州长。</p>
 <p>2017年1月至2018年12月，黑利在特朗普政府出任了美国常驻联合国代表。辞职后她曾出版回忆录，抨击特朗普政府团队，但承诺效忠特朗普。2021年她曾表示，如果特朗普再度参选总统，那么她不会参选。</p>
 <h3>英国50万教师、公务员大罢工</h3>
-<p>周三英国各地<a href="https://www.reuters.com/world/uk/uk-set-biggest-strike-action-years-teachers-civil-servants-walk-out-2023-02-01/">多达50万教师、公务员和列车司机集体罢工</a>，上街抗议，要求提供工资。首相苏纳克谴责罢工影响儿童上学。工会威胁还将采取更多破坏行动。</p>
+<p>周三英国各地<a href="https://www.reuters.com/world/uk/uk-set-biggest-strike-action-years-teachers-civil-servants-walk-out-2023-02-01/">多达50万教师、公务员和列车司机集体罢工</a>，上街抗议，要求提高工资。首相苏纳克谴责罢工影响儿童上学。工会威胁还将采取更多破坏行动。</p>
 <p>罢工导致英国多地学校关门，铁路停运，军队待命以协助边境检查。</p>
 <p>工会方面称，多达30万教师参加了罢工，是此次罢工主力。此次罢工也创下2011年公务员集体罢工以来的最大规模。</p>
 <p>苏纳克谴责罢工影响数百万儿童上学，其政府也对工会采取强硬态度，认为满足加薪要求会进一步加剧英国通货膨胀问题。</p>
