--- a/_posts/2023-02-02-INMEDIA-民研-港人對台政府好感跌至-4-創2008年以來新低.html
+++ b/_posts/2023-02-02-INMEDIA-民研-港人對台政府好感跌至-4-創2008年以來新低.html
@@ -19,7 +19,7 @@ author: 獨媒報導
 <p>至於港人對澳門政府的好感度仍然最高，陳家洛指澳門是港人娛樂和消閑的地方，故沒有產生負面影響亦屬合理。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/00728y9VY1" title="螢幕截圖 2023-02-02 下午6.26.33"><img src="https://live.staticflickr.com/65535/52664952123_cf737cd85a_b.jpg" width="1024" alt="螢幕截圖 2023-02-02 下午6.26.33" /></a><br /><em>左起：陳家洛、時事評論員鄭景鴻（民研直播截圖）</em></p>
 <p><strong>港人受媒體影響 對台灣好感度下跌屬正常</strong></p>
-<p>陳家洛表示，港人對台灣人民一向有很高的好感度，不過民進黨政府在台灣的主流媒體經常充當着壞角色，有很多負面新聞。不過，他指台灣作為一個民主社會，政府受到嚴重批評是一件正常的事，加上香港對台灣民主黨的論述也偏向負面，港人受傳媒影響下，對台灣政府的好感度下降也是十分合理。</p>
+<p>陳家洛表示，港人對台灣人民一向有很高的好感度，不過民進黨政府在台灣的主流媒體經常充當着壞角色，有很多負面新聞。不過，他指台灣作為一個民主社會，政府受到嚴重批評是一件正常的事，加上香港對台灣民進黨的論述也偏向負面，港人受傳媒影響下，對台灣政府的好感度下降也是十分合理。</p>
 <p>有記者問到港人對台灣政府好感度下跌，是否與台灣移民政策有關？陳家洛稱可能有些港人因受到懷疑感到委屈，令感觀反彈，「我相信對一啲香港人嚟講係受委屈⋯⋯佢哋會覺得我哋係香港人呀嘛，唔係特務嚟㗎嘛，唔係搞你哋㗎嘛，我哋係去擁抱你㗎嘛，點解你哋將好人當賊扮呢」。他指，香港政府亦沒有因此幫助香港人，反不允許港人到台灣參加金馬獎，「當香港政府係意識形態調較、操控、扭曲底下，對香港人作出一啲難以解釋嘅現象，都唔好怪香港人有調查顯示出的回應」。</p>
 <p><strong>港人對美國政府好感度上升 陳家洛稱因務實處理烏俄戰事</strong></p>
 <p>陳家洛亦提到美國的好感度淨值，雖然港人對美國政府的好感度淨值仍然是負數，但升幅顯著，相信與美國應對疫情的方式及復常速度有關。而美國應對烏俄戰事的處理態度上，「較特朗普時代，指手畫腳，指指點點，態度高於一齊嚟講，佢嘅態度較務實同踏實一啲」，令港人對美國好感度增加。</p>
