--- a/_posts/2023-02-02-PQ-為和平而戰-成形中的台美日同盟-何澄輝-堅強抵抗意志-充足戰前準備-才是面對戰爭威脅最好的做法.html
+++ b/_posts/2023-02-02-PQ-為和平而戰-成形中的台美日同盟-何澄輝-堅強抵抗意志-充足戰前準備-才是面對戰爭威脅最好的做法.html
@@ -48,7 +48,7 @@ author: 王昕
 
 
 
-<p>何澄輝認為除了軍事以外，還有民防體系的準備也很值得台灣思考與借鏡。烏克蘭抵禦俄羅斯的主要力量是來自於正規軍、國民警衛隊，還有一個目前受到矚目的「國土防衛部隊」（TDF）。國土防衛隊的職能在於民防、治安以及準軍事方面，是一個由烏克蘭人民志願加入的組織，18 歲以上 65 歲以下、不分性別，經過申請，通過體能、心理測驗後，在假日接受訓練，工作之餘承擔相關防衛義務。這個民防體系有一個原則是在地招募、在地培訓、在地防禦，<strong>他們在戰時的任務並不是讓平民直接拿槍上戰場，而是持續穩定運作地方的社會機能，維持治安、防止敵對勢力的滲透和第五縱隊的破壞</strong>。這使得烏克蘭軍隊在面對敵人入侵時，可以集中精力在前線作戰而不需要擔心後方的穩定。</p>
+<p>何澄輝認為除了軍事以外，還有民防體系的準備也很值得台灣思考與借鏡。烏克蘭抵禦俄羅斯的主要力量是來自於正規軍、國民警衛隊，還有一個目前受到矚目的「國土防衛部隊」（TDF）。國土防衛部隊的職能在於民防、治安以及準軍事方面，是一個由烏克蘭人民志願加入的組織，18 歲以上 65 歲以下、不分性別，經過申請，通過體能、心理測驗後，在假日接受訓練，工作之餘承擔相關防衛義務。這個民防體系有一個原則是在地招募、在地培訓、在地防禦，<strong>他們在戰時的任務並不是讓平民直接拿槍上戰場，而是持續穩定運作地方的社會機能，維持治安、防止敵對勢力的滲透和第五縱隊的破壞</strong>。這使得烏克蘭軍隊在面對敵人入侵時，可以集中精力在前線作戰而不需要擔心後方的穩定。</p>
 
 
 
