--- a/_posts/2023-02-02-INMEDIA-黃之鋒獄中撰近2,000字批張秀賢-指對方10年前-變節-欠債-已有跡可尋.html
+++ b/_posts/2023-02-02-INMEDIA-黃之鋒獄中撰近2,000字批張秀賢-指對方10年前-變節-欠債-已有跡可尋.html
@@ -9,6 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/202302021%20%281%29.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>前學民思潮成員兼前元朗區議員張秀賢，早前被揭借錢唔還，被指拖欠政界及社運中人至少逾百萬元。涉及民主派初選47人案、前學民思潮召集人黃之鋒，他在獄中撰寫近2,000字長文批評張秀賢，指對方早在10年前已「變節」，「欠債」更是早已有跡可尋。</p>
+<p><strong>【2月3日 0945更新】張秀賢回覆《Renews》查詢，稱黃之鋒提及的書籍，版稅收益只有800元。至於黃文中提及的與中聯辦聯繫，張秀賢稱2013年「無同中聯辦嘅人打交道」，稱指控無中生有。至2014年雨傘運動期間，張承認有中間人聯絡他，但稱有「上報」，會而亦有其他學聯成員。至於2019年參選邀袁彌昌支持，張秀賢稱為希望擴大支持面。張秀賢又稱，他的主張溫和不代表他「串通中間人」，「我無出賣過同路人，我無篤過灰起碼。」《獨媒》曾聯絡張秀賢，獲回覆指沒有補充。</strong></p>
 <p>財經專欄作家渾水<a href="https://bit.ly/3WNq1Di">早前</a>不點名指控張秀賢，稱對方欠債累累，自己亦是其債主之一，斥他在借錢後過奢華生活及買車等。渾水更指張秀賢已「變節」，更吹噓自己能夠「搭路見葉劉」，相信他在政治上已經「變節」，又向陌生人派發「基本法乜乜研究中心」卡片。</p>
 <p>新民黨主席、行政會議召集人葉劉淑儀<a href="https://bit.ly/3Y0Ssi4">回應</a>時就稱，與張秀賢並不相熟，「我見過佢大概兩次」。有記者翻查資料，發現其任職的「基本法學生中心」的地址由一間公司持有，股東及董事為前行政長官董建華的特別顧問葉國華。事件引起連串迴響，揭發張秀賢拖欠至少逾百萬元，債主包括漫畫家阿塗、政治學者黃偉國、多名前區議員及街坊等。張秀賢早前曾致歉，但就稱屬私人事務，會積極面對及解決。</p>
 <p><strong>聽電台獲悉事件 黃之鋒：沒開名也大概猜到是張秀賢</strong></p>
