--- a/_posts/2023-02-02-PQ-為和平而戰-成形中的台美日同盟-何澄輝-堅強抵抗意志-充足戰前準備-才是面對戰爭威脅最好的做法.html
+++ b/_posts/2023-02-02-PQ-為和平而戰-成形中的台美日同盟-何澄輝-堅強抵抗意志-充足戰前準備-才是面對戰爭威脅最好的做法.html
@@ -92,11 +92,15 @@ author: 王昕
 
 
 
+<p class="pqnote"><strong>調整兵力結構</strong><br>建立四大防禦區塊，賦予各部隊及系統明確的任務，而且能夠相互支援，發揮總體戰力，也可針對不同任務，施以不同強度、專業技能的訓練，使訓練更紮實、更專精、更有效率。<a href="https://www.ey.gov.tw/Page/5A8A0CB5B41DA11E/75930814-745f-43e3-bbfe-4d39e94f8afa"><br></a><br>1. 主戰部隊：以志願役軍人為主，發揮專業的訓練、精銳的戰力，守護國家安全第一線。<a href="https://www.ey.gov.tw/Page/5A8A0CB5B41DA11E/75930814-745f-43e3-bbfe-4d39e94f8afa"><br></a><br>2. 守備部隊：以義務役為主，主要負責國土守備、重要軍事與民間設施防護，並支援主戰部隊、協助民防工作。<a href="https://www.ey.gov.tw/Page/5A8A0CB5B41DA11E/75930814-745f-43e3-bbfe-4d39e94f8afa"><br></a><br>3. 民防系統：由保安警察、地方政府轄屬民防團隊、替代役組成，支援軍事作戰，維持救災、醫療、治安維護、工程搶修等，確保社會持續運作。<a href="https://www.ey.gov.tw/Page/5A8A0CB5B41DA11E/75930814-745f-43e3-bbfe-4d39e94f8afa"><br></a><br>4. 後備系統：以退役的志願役充實主戰部隊，退役的義務役充實守備部隊為原則，於戰時，動員後備軍人，支援主戰跟守備部隊各項作戰，並且負責城鄉守備的任務。<a href="https://www.ey.gov.tw/Page/5A8A0CB5B41DA11E/75930814-745f-43e3-bbfe-4d39e94f8afa"><br></a>（引用自行政院<a href="https://www.ey.gov.tw/Page/5A8A0CB5B41DA11E/75930814-745f-43e3-bbfe-4d39e94f8afa" target="_blank" rel="noopener">強化全民國防兵力結構調整方案</a>）</p>
+
+
+
 <h3>黑熊學院對民防的建議</h3>
 
 
 
-<p class="pqnote">何澄輝表示黑熊學院作為一個民間關注民防議題的團體，希望向政府提出以下<strong>建議</strong>：<br><br>① 民防體系納入兵力調整方案，所謂民防役的訓練內容應更貼近社會面臨現代戰爭可能遭遇的挑戰，著重於提升直接、有效應對重大災變和戰爭的能力，例如：救護、防災避難、保衛及維護基礎設施、災民收容中心的開設及維持等。<br><br>② 兵力調整方案明確規定<strong>國軍地方守備部隊</strong>肩負支援民防系統運作的重要任務，為了與民防系統對接，其訓練內容也應包含相應上述救護、防災等專業技術。反之，民防也應具有守備部隊的軍事技術基礎能力。守備部隊和民防系統需要更多的技術協作訓練。<br><br>③ 兵力調整方案還有<strong>許多民間力量沒有被納入民防計劃</strong>當中，包含非志願役的女性、已除役的民眾。在俄烏戰爭中，有 9 成民眾碰不到武器，但戰爭影響所有居民，是整體社會在承受損失。要提升社會韌性需要讓各階層、民間、非軍事部門被納入一起應對戰爭風險及威脅。</p>
+<p class="pqnote">何澄輝表示黑熊學院作為一個民間關注民防議題的團體，希望向政府提出以下<strong>建議</strong>：<a href="https://www.ey.gov.tw/Page/5A8A0CB5B41DA11E/75930814-745f-43e3-bbfe-4d39e94f8afa" title=""><br></a><br>① 民防體系納入兵力調整方案，所謂民防役的訓練內容應更貼近社會面臨現代戰爭可能遭遇的挑戰，著重於提升直接、有效應對重大災變和戰爭的能力，例如：救護、防災避難、保衛及維護基礎設施、災民收容中心的開設及維持等。<br><br>② 兵力調整方案明確規定<strong>國軍地方守備部隊</strong>肩負支援民防系統運作的重要任務，為了與民防系統對接，其訓練內容也應包含相應上述救護、防災等專業技術。反之，民防也應具有守備部隊的軍事技術基礎能力。守備部隊和民防系統需要更多的技術協作訓練。<br><br>③ 兵力調整方案還有<strong>許多民間力量沒有被納入民防計劃</strong>當中，包含非志願役的女性、已除役的民眾。在俄烏戰爭中，有 9 成民眾碰不到武器，但戰爭影響所有居民，是整體社會在承受損失。要提升社會韌性需要讓各階層、民間、非軍事部門被納入一起應對戰爭風險及威脅。</p>
 
 
 
