--- a/_posts/2023-02-03-PQ-北約秘書長訪日-俄烏戰爭引北約關注東亞局勢.html
+++ b/_posts/2023-02-03-PQ-北約秘書長訪日-俄烏戰爭引北約關注東亞局勢.html
@@ -12,7 +12,7 @@ author: 陳怡菱
 
 
 
-<figure class="wp-block-image size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/0e52d51c-6fb323f1-a663-46d3-a16e-b4170196550d-1024x682.jpeg" alt="" class="wp-image-126475" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/0e52d51c-6fb323f1-a663-46d3-a16e-b4170196550d-1024x682.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/0e52d51c-6fb323f1-a663-46d3-a16e-b4170196550d-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/0e52d51c-6fb323f1-a663-46d3-a16e-b4170196550d-768x512.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/0e52d51c-6fb323f1-a663-46d3-a16e-b4170196550d.jpeg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>北約秘書長史托騰柏格（Jens Stoltenberg）與日本岸田文雄首相。<br>（圖／日本首相官邸）</figcaption></figure>
+<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/0e52d51c-6fb323f1-a663-46d3-a16e-b4170196550d-1024x682.jpeg" alt="" class="wp-image-126475" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/0e52d51c-6fb323f1-a663-46d3-a16e-b4170196550d-1024x682.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/0e52d51c-6fb323f1-a663-46d3-a16e-b4170196550d-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/0e52d51c-6fb323f1-a663-46d3-a16e-b4170196550d-768x512.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/0e52d51c-6fb323f1-a663-46d3-a16e-b4170196550d.jpeg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>北約秘書長史托騰柏格（Jens Stoltenberg）與日本岸田文雄首相。<br>（圖／日本首相官邸）</figcaption></figure>
 
 
 
