--- a/_posts/2023-02-03-INMEDIA-涉辦-殺鬼隊訓練班-稱要推翻政府-武術教練認煽動顛覆國家政權-女學員認管槍械罪.html
+++ b/_posts/2023-02-03-INMEDIA-涉辦-殺鬼隊訓練班-稱要推翻政府-武術教練認煽動顛覆國家政權-女學員認管槍械罪.html
@@ -10,7 +10,7 @@ author: 獨媒報導
 
 <img src="https://www.inmediahk.net/files/column_images/wu%201280.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>警方國安處早前派臥底參加「集英楊武堂 殺鬼隊武術班」，<a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E5%9C%8B%E5%AE%89%E8%99%95%E6%8B%98%E6%A0%BC%E9%AC%A5%E6%95%99%E7%B7%B4%E5%8F%8A%E5%8A%A9%E7%90%86-%E6%8C%87%E6%B6%89%E4%BD%9C%E5%87%BA%E5%85%B7%E7%85%BD%E5%8B%95%E6%84%8F%E5%9C%96%E8%A1%8C%E7%82%BA">當場拘捕59歲武術教練及62歲女學員</a>。武術教練涉於網上發文，煽動他人加入部隊受訓，目的以暴力革命推翻共產黨，並成立「影子政府」；女學員住所則被搜出開山刀及弩等。已還柙一年的兩人今（3日）在區域法院認罪，武術教練承認《國安法》的「煽動他人顛覆國家政權」罪；女學員則承認無牌管有槍械罪。案件押後至2月24日求情及判刑，期間為兩人索取背景報告，另為武術教練索取精神科及心理報告。女被告申請保釋候判獲批，男被告繼續還柙。</p>
 <p>兩名被告分別為武術教練黃德強（59歲）及無業的張文芝（62歲）。</p>
-<p>首被告黃德強承認「煽動他人顛覆國家政權」罪以及無牌管有槍械罪；次被告張文芝承認無牌管有槍械罪。兩人各自面對的一項有意圖而管有攻擊性武器罪將存檔法庭，不予起訴。</p>
+<p>首被告黃德強承認「煽動他人顛覆國家政權」罪以及無牌管有槍械罪；次被告張文芝承認無牌管有槍械罪。《國安法》指定法官練錦鴻裁定兩人罪成。兩人各自面對的一項有意圖而管有攻擊性武器罪將存檔法庭，不予起訴。</p>
 <p><strong>警方網上巡邏發現帖文 煽動以暴力革命推翻政府</strong></p>
 <p>兩人同意的案情指，警方進行網上巡邏，於2022年3月16日發現Facebook帳戶「Denis WONG」及「Tommy WONG」分別有25及14個顛覆性帖文。上述帖文於2020年3月27日至2022年2月10日期間發出，並設定為公開，該些帖文至《國安法》生效後仍然展示。</p>
 <p>兩個帳戶持有人分別煽動他人作出以下行為：參與名為「集英揚武堂 殺鬼隊訓練班」的武術班；在課堂接受武術訓練，並以片段示範有關技巧；學習如何使用武器，並以相片示範如何手持弩及弓箭。</p>
